[gd_scene load_steps=14 format=3 uid="uid://ex223yycxufa"]

[ext_resource type="Script" uid="uid://brd4lwxf7jjc2" path="res://Menus/menu.gd" id="1_7ihqj"]
[ext_resource type="PackedScene" uid="uid://bag6tk8fbc21m" path="res://Player/models/TheCar.glb" id="2_n6o36"]
[ext_resource type="PackedScene" uid="uid://dkashjgsuj6rv" path="res://Menus/Settings.tscn" id="3_1txdl"]
[ext_resource type="FontFile" uid="uid://bmorm6k68wepk" path="res://Fonts/Roboto-BlackItalic.ttf" id="3_5ncg0"]
[ext_resource type="Texture2D" uid="uid://jn8lmaq13ofq" path="res://Level/Map/Map_bricks.png" id="4_n6o36"]
[ext_resource type="Theme" uid="uid://c7yqk7py056vj" path="res://Menus/MainTheme.tres" id="5_5ncg0"]
[ext_resource type="AudioStream" uid="uid://vbmh8j7hi30" path="res://Menus/Normal Taxi (quiet).mp3" id="8_ju15h"]
[ext_resource type="PackedScene" uid="uid://vdupx1vcodhw" path="res://Menus/Scores/leaderboards.tscn" id="8_m16r1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5ncg0"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_1txdl"]
sky_material = SubResource("ProceduralSkyMaterial_5ncg0")

[sub_resource type="Environment" id="Environment_1txdl"]
background_mode = 3
sky = SubResource("Sky_1txdl")
ambient_light_source = 1
reflected_light_source = 1

[sub_resource type="LabelSettings" id="LabelSettings_w0hos"]
font = ExtResource("3_5ncg0")
font_size = 45
shadow_size = 6
shadow_color = Color(0, 0, 0, 0.713726)

[sub_resource type="LabelSettings" id="LabelSettings_m16r1"]
font = ExtResource("3_5ncg0")
font_size = 12
shadow_size = 3
shadow_color = Color(0, 0, 0, 0.713726)

[node name="MainMenu" type="Node3D"]
process_mode = 1
script = ExtResource("1_7ihqj")
settings_scene = ExtResource("3_1txdl")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1txdl")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.911604, -0.355996, 0.205535, 7.59124e-09, 0.5, 0.866025, -0.411069, -0.789473, 0.455802, 0, 0, 0)
sky_mode = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.20059, 0.878409, -0.356947)

[node name="TheCar" parent="." instance=ExtResource("2_n6o36")]
unique_name_in_owner = true
process_mode = 3
transform = Transform3D(-0.257032, 0, 0.966403, 0, 1, 0, -0.966403, 0, -0.257032, 2.21, 0, -3.986)

[node name="MainMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ScoresButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
offset_left = 38.0
offset_top = 97.0
offset_right = 96.0
offset_bottom = 116.0
focus_neighbor_top = NodePath("../StartButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../StartButton")
theme = ExtResource("5_5ncg0")
text = "Scores"
icon_alignment = 1

[node name="SettingsButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
offset_left = 33.0
offset_top = 125.0
offset_right = 101.0
offset_bottom = 144.0
focus_neighbor_top = NodePath("../ScoresButton")
focus_neighbor_bottom = NodePath("../InstructionsButton")
focus_next = NodePath("../InstructionsButton")
focus_previous = NodePath("../ScoresButton")
theme = ExtResource("5_5ncg0")
text = "Settings"
icon_alignment = 1

[node name="InstructionsButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
offset_left = 23.0
offset_top = 154.0
offset_right = 114.0
offset_bottom = 173.0
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../StartButton")
focus_next = NodePath("../StartButton")
focus_previous = NodePath("../SettingsButton")
theme = ExtResource("5_5ncg0")
text = "Instructions"

[node name="StartButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
texture_filter = 1
texture_repeat = 1
offset_left = 30.0
offset_top = 183.0
offset_right = 109.0
offset_bottom = 221.0
focus_neighbor_top = NodePath("../InstructionsButton")
focus_neighbor_bottom = NodePath("../ScoresButton")
focus_next = NodePath("../ScoresButton")
focus_previous = NodePath("../InstructionsButton")
theme = ExtResource("5_5ncg0")
theme_override_font_sizes/font_size = 30
text = "Start"
icon_alignment = 1

[node name="Title" type="Label" parent="MainMenu"]
offset_top = 17.0
offset_right = 320.0
offset_bottom = 70.0
text = "Normal Taxi"
label_settings = SubResource("LabelSettings_w0hos")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="Label" parent="MainMenu/Title"]
layout_mode = 0
offset_top = 50.0
offset_right = 320.0
offset_bottom = 103.0
text = "Don't forget the boost mechanic!"
label_settings = SubResource("LabelSettings_m16r1")
horizontal_alignment = 1

[node name="ScoresLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Leaderboards" parent="ScoresLayer" instance=ExtResource("8_m16r1")]
unique_name_in_owner = true

[node name="ExitScoresButton" type="Button" parent="ScoresLayer"]
unique_name_in_owner = true
offset_left = 276.0
offset_top = 15.0
offset_right = 311.0
offset_bottom = 34.0
theme = ExtResource("5_5ncg0")
text = "Exit"

[node name="SettingsLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="Settings" parent="SettingsLayer" instance=ExtResource("3_1txdl")]
unique_name_in_owner = true

[node name="InstructionsLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="InstructionsLayer"]
offset_right = 320.0
offset_bottom = 240.0
color = Color(0, 0, 0, 0.65098)

[node name="ExitInstructionsButton" type="Button" parent="InstructionsLayer"]
unique_name_in_owner = true
offset_left = 276.0
offset_top = 211.0
offset_right = 311.0
offset_bottom = 230.0
theme = ExtResource("5_5ncg0")
text = "Exit"

[node name="InstructionsLabel" type="Label" parent="InstructionsLayer"]
offset_left = 10.0
offset_top = 2.0
offset_right = 310.0
offset_bottom = 239.0
theme = ExtResource("5_5ncg0")
theme_override_font_sizes/font_size = 10
text = "Pick up passengers by stopping next to them, then take them where they want to go!

Steer with the left analog stick or the d-pad!

Accelerate with the bottom face button, the right trigger/shoulder button, or the J key!

Brake with the right face button, the left trigger/shoulder button, or the K key!

Change gears with the left face button or the Shift key!

Step on the gas immediately after changing gears to get a Normal Boost!

Press Select or the R key if you get stuck!"
autowrap_mode = 2

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color(0.671435, 0.545798, 0.54639, 1)
offset_right = 320.0
offset_bottom = 240.0
texture = ExtResource("4_n6o36")
stretch_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ju15h")
volume_db = -1.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainMenu/ScoresButton" to="." method="_on_scores_button_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenu/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="ScoresLayer/ExitScoresButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="InstructionsLayer/ExitInstructionsButton" to="." method="_on_exit_button_pressed"]
